cluster/manifests/cortex-bot/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex-bot
  labels:
    name: cortex-bot
    pod-security.kubernetes.io/enforce: restricted
