cluster/manifests/cortex-bot/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cortex-bot
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cortex-bot
  mtls:
    mode: STRICT
