cluster/manifests/cortex-bot/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex-bot
spec:
  trafficDistribution: PreferClose
  selector:
    app.kubernetes.io/name: cortex-bot
    app.kubernetes.io/component: ""
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
