cluster/manifests/cortex-bot/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cortex-bot
spec:
  exportTo:
    - .
  gateways:
    - mesh
  hosts:
    - cortex-bot
  http:
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: slack-bolt-proxy
      route:
        - destination:
            host: cortex-bot
            port:
              number: 8080
            subset: default
      mirror:
        host: slack-logger.slack-logger.svc.cluster.local
        port:
          number: 8080
      mirrorPercentage:
        value: 100.0
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
    - route:
        - destination:
            host: cortex-bot
            port:
              number: 8080
            subset: default
      # https://github.com/istio/istio/blob/1.22.2/pilot/pkg/networking/core/route/retry/retry.go#L34
      retries:
        attempts: 0
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cortex-bot-redis
spec:
  exportTo:
    - .
  gateways:
    - mesh
  hosts:
    - cortex-bot-redis
  tcp:
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: cortex-bot
      route:
        - destination:
            host: cortex-bot-redis
            port:
              number: 6379
            subset: default
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cortex-bot-redis-haproxy
spec:
  exportTo:
    - .
  gateways:
    - mesh
  hosts:
    - cortex-bot-redis-haproxy
  tcp:
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: cortex-bot
      route:
        - destination:
            host: cortex-bot-redis-haproxy
            port:
              number: 6379
            subset: default
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: embedding-retrieval.embedding-retrieval.svc.cluster.local
spec:
  exportTo:
    - .
  gateways:
    - mesh
  hosts:
    - embedding-retrieval.embedding-retrieval.svc.cluster.local
  http:
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: cortex-bot
      route:
        - destination:
            host: embedding-retrieval.embedding-retrieval.svc.cluster.local
            port:
              number: 8080
            subset: default
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana.grafana.svc.cluster.local
spec:
  exportTo:
    - .
  gateways:
    - mesh
  hosts:
    - grafana.grafana.svc.cluster.local
  http:
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: cortex-bot
          port: 8000
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 8000
            subset: sticky-session
      retries:
        attempts: 0
    - match:
        - sourceNamespace: cortex-bot
          sourceLabels:
            app.kubernetes.io/name: cortex-bot
      route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 3000
            subset: default
      retries:
       attempts: 0
