cluster/manifests/cortex-bot/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-bot-prometheus-metrics-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-bot
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 65532
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-bot
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-bot
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-bot
          podSelector:
            matchLabels:
              app.kubernetes.io/name: slack-bolt-proxy
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-bot-redis-haproxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-bot
      app.kubernetes.io/component: redis-haproxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-bot
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-bot
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 6380
        - protocol: TCP
          port: 6381
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-bot-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cortex-bot
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cortex-bot
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-bot
              app.kubernetes.io/component: ""
        - namespaceSelector:
            matchLabels:
              name: cortex-bot
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cortex-bot
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cortex-bot-redis-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - protocol: TCP
          port: 15012
    - to:
        - namespaceSelector:
            matchLabels:
              name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-agent
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 4317
